--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
-version: '3'
+version: "3"
 
 services:
-  backend:
-    
+  app:
     build:
-      context: ./server
-      dockerfile: ./Dockerfile
-    image: "dockertestserver:latest"
+      context: ./app
+    environment:
+      EXPRESS_HOST: backend
+
+  api:
+    build:
+      context: ./api
+      
     ports:
       - "5000:5000"
-  frontend:
-    build:
-      context: ./client
-      dockerfile: ./Dockerfile
-    image: "dockertestclient:latest"
-    ports:
-      - "3000:3000"
-    links:
-      - "backend:be"
+    env_file: ./api/.env
+    environment:
+      HOST: 0.0.0.0
       
+
+ 
+
