working in dev - need to check prod

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: ./app
     environment:
-      EXPRESS_HOST: backend
+      EXPRESS_HOST: api
 
   api:
     build:
